--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -22,13 +22,17 @@
 
 .btn-cart{
     width: 100%;
-    background-color: #9096F4;
+    background-color: #7980db;
     border-radius: 0 0 8px 8px;
     border: none;
     position: absolute;
     bottom: 0;
-    
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn-text{
+    margin-right: 5px;
 }
 .btn-cart{
     font-size: 20px;
