--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -8,3 +8,20 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 25px;
 }
+
+.cart-container{
+    background-color: rgb(84, 84, 189);
+    position: sticky;
+    top: 0;
+}
+@media screen and (max-width:700px) {
+    .products-container{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 25px;
+    }
+    .shop-container{
+        display: grid;
+        grid-template-columns:  1fr;
+    }
+}
